--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 </head>
 <body class="text-gray-800">
 
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v22.0"></script>
     <header class="bg-white shadow-lg py-4 px-6 md:px-12 sticky top-0 z-50 rounded-b-lg">
         <nav class="container mx-auto flex flex-wrap justify-between items-center">
             <a href="#home" class="text-3xl font-bold text-indigo-700 tracking-tight">
@@ -48,8 +50,9 @@
                 <a href="#about" class="block text-lg font-medium text-gray-700 hover:text-indigo-600 transition duration-300 py-2 md:py-0">About Us</a>
                 <a href="#services" class="block text-lg font-medium text-gray-700 hover:text-indigo-600 transition duration-300 py-2 md:py-0">Services</a>
                 <a href="#gallery" class="block text-lg font-medium text-gray-700 hover:text-indigo-600 transition duration-300 py-2 md:py-0">Gallery</a>
+                <a href="#booking" class="block text-lg font-medium text-gray-700 hover:text-indigo-600 transition duration-300 py-2 md:py-0">Availability</a>
                 <a href="#contact" class="block text-lg font-medium text-gray-700 hover:text-indigo-600 transition duration-300 py-2 md:py-0">Contact Us</a>
-                <a href="https://form.jotform.com/251493884642063" target="_blank" class="block text-lg font-medium text-indigo-700 hover:text-purple-600 transition duration-300 py-2 md:py-0 px-4 rounded-full bg-indigo-100 hover:bg-indigo-200">Quick Inquiry</a>
+                <a href="https://agent.jotform.com/01970c6b937b7a6ea6a852e59a1cbf652524" target="_blank" class="block text-lg font-medium text-indigo-700 hover:text-purple-600 transition duration-300 py-2 md:py-0 px-4 rounded-full bg-indigo-100 hover:bg-indigo-200">Quick Inquiry</a>
             </div>
         </nav>
     </header>
@@ -70,7 +73,7 @@
 
     <div class="bg-purple-700 text-white text-center py-3 shadow-md">
         <p class="text-lg font-semibold">
-            Need immediate assistance? <a href="https://form.jotform.com/251493884642063" target="_blank" class="underline hover:text-purple-200 transition duration-300">Click here for Direct Inquiry!</a>
+            Need immediate assistance? <a href="https://agent.jotform.com/01970c6b937b7a6ea6a852e59a1cbf652524" target="_blank" class="underline hover:text-purple-200 transition duration-300">Click here for Direct Inquiry!</a>
         </p>
     </div>
 
@@ -85,7 +88,7 @@
             <p class="text-xl md:text-2xl mb-10 opacity-90 animate-fade-in-up">
                 Creating Unforgettable Memories at Vishal Banquet Hall, Bodh Gaya.
             </p>
-            <a href="https://form.jotform.com/251493884642063" target="_blank" class="inline-block bg-white text-indigo-700 hover:bg-indigo-100 px-10 py-4 rounded-full text-xl font-semibold shadow-lg transform hover:scale-105 transition duration-300 ease-in-out">
+            <a href="https://form.jotform.com/251425170005443" target="_blank" class="inline-block bg-white text-indigo-700 hover:bg-indigo-100 px-10 py-4 rounded-full text-xl font-semibold shadow-lg transform hover:scale-105 transition duration-300 ease-in-out">
                 Book an Appointment
             </a>
         </div>
@@ -125,6 +128,30 @@
                     <h3 class="text-2xl font-semibold text-gray-800 mb-4">Corporate Events</h3>
                     <p class="text-gray-600">Host successful conferences, seminars, and product launches with our modern facilities.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-16 bg-white rounded-xl shadow-lg mx-auto max-w-7xl mt-12 px-6 md:px-12">
+        <div class="container mx-auto text-center">
+            <h2 class="text-4xl font-bold text-indigo-700 mb-12">What Our Clients Say</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+                <div class="bg-gray-50 p-8 rounded-xl shadow-md border-l-4 border-indigo-500">
+                    <p class="text-lg italic text-gray-700 mb-4">"Vishal Banquet Hall made our wedding day absolutely perfect! The staff was incredibly supportive, and the venue looked stunning."</p>
+                    <p class="font-semibold text-gray-800">- Priya Sharma</p>
+                </div>
+                <div class="bg-gray-50 p-8 rounded-xl shadow-md border-l-4 border-purple-500">
+                    <p class="text-lg italic text-gray-700 mb-4">"Excellent service and a beautiful space for our corporate event. Highly recommend for any professional gathering."</p>
+                    <p class="font-semibold text-gray-800">- Rajesh Kumar, CEO TechSolutions</p>
+                </div>
+            </div>
+            <div class="mt-12 flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6">
+                <a href="https://forms.gle/Dc7zt6C6AA4HTupF7" target="_blank" class="inline-block bg-indigo-600 text-white hover:bg-indigo-700 px-8 py-3 rounded-full text-lg font-semibold shadow-md transition duration-300">
+                    Leave a Google Review
+                </a>
+                <a href="https://form.jotform.com/251443928257059" target="_blank" class="inline-block bg-purple-600 text-white hover:bg-purple-700 px-8 py-3 rounded-full text-lg font-semibold shadow-md transition duration-300">
+                    Submit a Review
+                </a>
             </div>
         </div>
     </section>
@@ -326,6 +353,124 @@
         </div>
     </section>
 
+    <section id="social-proof" class="py-16 bg-white rounded-xl shadow-lg mx-auto max-w-7xl mt-12 px-6 md:px-12">
+        <div class="container mx-auto text-center">
+            <h2 class="text-4xl font-bold text-indigo-700 mb-12">Connect With Us & Our Community</h2>
+            <p class="text-lg text-gray-700 mb-8">See our latest events, inspirations, and behind-the-scenes moments on social media!</p>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+                <div class="bg-gray-50 p-6 rounded-xl shadow-md border border-gray-200">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Our Facebook Feed</h3>
+                    <div class="h-80 w-full flex items-center justify-center bg-gray-100 text-gray-500 text-sm">
+                        <div class="fb-page"
+                            data-href="https://www.facebook.com/YOUR_ACTUAL_FACEBOOK_PAGE_URL"
+                            data-tabs="timeline"
+                            data-width=""
+                            data-height="320"
+                            data-small-header="false"
+                            data-adapt-container-width="true"
+                            data-hide-cover="false"
+                            data-show-facepile="false">
+                            <blockquote cite="https://www.facebook.com/YOUR_ACTUAL_FACEBOOK_PAGE_URL" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/YOUR_ACTUAL_FACEBOOK_PAGE_URL">Vishal Banquet Hall</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <a href="https://www.facebook.com/share/1BLptjfrcY/?mibextid=wwXIfr" target="_blank" class="mt-4 inline-block text-indigo-600 hover:underline">Visit our Facebook Page →</a>
+                </div>
+
+                <div class="bg-gray-50 p-6 rounded-xl shadow-md border border-gray-200 flex flex-col items-center justify-center">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Our YouTube Gallery</h3>
+                    <div class="w-full h-80 flex items-center justify-center">
+                        <div class="elfsight-app-7f0332fa-8921-4e50-bad9-e79b920c2fa6" data-elfsight-app-lazy></div>
+                    </div>
+                    <p class="text-gray-600 mt-4 text-center">Watch videos of our beautiful venue and past events!</p>
+                    <a href="http://www.youtube.com/@VishalBanquetHall" target="_blank" class="inline-block bg-red-600 text-white hover:bg-red-700 px-6 py-2 rounded-full text-md font-semibold shadow-md transition duration-300 mt-4">
+                        Visit our YouTube Channel →
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="partnerships" class="py-16 bg-gray-50 rounded-xl shadow-lg mx-auto max-w-7xl mt-12 px-6 md:px-12">
+        <div class="container mx-auto text-center">
+            <h2 class="text-4xl font-bold text-indigo-700 mb-12">Our Trusted Partners</h2>
+            <p class="text-lg text-gray-700 mb-8">We collaborate with the best local vendors to make your event truly special.</p>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+                <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2">
+                    <img src="https://via.placeholder.com/100x100?text=Decor+Logo" alt="Partner Name Logo" class="mx-auto mb-6 h-24 w-24 object-contain rounded-full border border-gray-200">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-2">Dreamy Decors</h3>
+                    <p class="text-gray-600 mb-4">Expert decorators creating stunning ambiance for any occasion.</p>
+                    <a href="https://www.example.com/dreamydecors" target="_blank" class="inline-block bg-purple-600 text-white hover:bg-purple-700 px-6 py-2 rounded-full text-md font-semibold shadow-md transition duration-300">
+                        Visit Website
+                    </a>
+                </div>
+
+                <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2">
+                    <img src="https://via.placeholder.com/100x100?text=Photo+Logo" alt="Partner Name Logo" class="mx-auto mb-6 h-24 w-24 object-contain rounded-full border border-gray-200">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-2">Lens & Lights Photography</h3>
+                    <p class="text-gray-600 mb-4">Capturing timeless memories with professional photography services.</p>
+                    <a href="https://www.example.com/lenslights" target="_blank" class="inline-block bg-purple-600 text-white hover:bg-purple-700 px-6 py-2 rounded-full text-md font-semibold shadow-md transition duration-300">
+                        Visit Website
+                    </a>
+                </div>
+
+                <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2">
+                    <img src="https://via.placeholder.com/100x100?text=DJ+Logo" alt="Partner Name Logo" class="mx-auto mb-6 h-24 w-24 object-contain rounded-full border border-gray-200">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-2">Groove Gurus DJ</h3>
+                    <p class="text-gray-600 mb-4">Keeping the energy high with an amazing selection of music for all events.</p>
+                    <a href="https://www.example.com/groovegurus" target="_blank" class="inline-block bg-purple-600 text-white hover:bg-purple-700 px-6 py-2 rounded-full text-md font-semibold shadow-md transition duration-300">
+                        Visit Website
+                    </a>
+                </div>
+
+                </div>
+            <p class="text-gray-700 mt-12">Interested in becoming a Vishal Banquet Hall partner? <a href="#contact" class="text-indigo-600 hover:underline">Contact us!</a></p>
+        </div>
+    </section>
+
+    <section id="booking" class="py-16 bg-white rounded-xl shadow-lg mx-auto max-w-7xl mt-12 px-6 md:px-12">
+        <div class="container mx-auto text-center">
+            <h2 class="text-4xl font-bold text-indigo-700 mb-12">Check Availability & Get a Quote</h2>
+            <p class="text-lg text-gray-700 mb-8 max-w-3xl mx-auto">
+                Planning your next event? Use the tools below to check our availability and receive a personalized quote tailored to your specific needs.
+            </p>
+
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 items-start">
+                <div class="bg-gray-50 p-8 rounded-xl shadow-md border border-gray-200 h-96 flex flex-col justify-center items-center text-gray-700">
+                    <h3 class="text-2xl font-semibold mb-4">Event Calendar Overview</h3>
+                    <p class="text-center mb-6">
+                        See what dates are available! For real-time updates and detailed availability, please use our inquiry form.
+                    </p>
+                    <div class="w-full h-48 bg-gray-200 rounded-md flex items-center justify-center text-gray-500">
+                        <iframe
+                            src="https://outlook.live.com/owa/calendar/00000000-0000-0000-0000-000000000000/ab1c8001-2355-4575-a31d-ae367714001e/cid-6CA6FD4CC915D04E/index.html"
+                            width="100%"
+                            height="100%"
+                            frameborder="0"
+                            scrolling="no"
+                        ></iframe>
+                    </div>
+                </div>
+
+                <div class="bg-gray-50 p-8 rounded-xl shadow-md border border-gray-200 flex flex-col justify-center items-center h-96">
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Request a Personalized Quote</h3>
+                    <p class="text-lg text-gray-700 mb-6 text-center">
+                        Tell us about your event, and we'll get back to you with a detailed quote and availability.
+                    </p>
+                    <a href="https://form.jotform.com/251425170005443" target="_blank" class="inline-block bg-indigo-600 text-white hover:bg-indigo-700 px-10 py-4 rounded-full text-xl font-semibold shadow-lg transform hover:scale-105 transition duration-300 ease-in-out mb-4">
+                        Get a Custom Quote
+                    </a>
+                    <p class="text-sm text-gray-600">
+                        Or for a quick inquiry, use our <a href="https://agent.jotform.com/01970c6b937b7a6ea6a852e59a1cbf652524" target="_blank" class="text-indigo-600 hover:underline">Direct Inquiry Form</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="contact" class="py-16 bg-white rounded-xl shadow-lg mx-auto max-w-7xl mt-12 px-6 md:px-12">
         <div class="container mx-auto text-center">
             <h2 class="text-4xl font-bold text-indigo-700 mb-12">Contact Us</h2>
@@ -357,7 +502,7 @@
                     <a href="https://www.google.com/maps/dir/?api=1&destination=Vishal+Banquet+Hall,+Gaya-Dobhi+Rd,+Musatpura,+Bodh+Gaya,+Bihar+823004" target="_blank" class="inline-block bg-purple-600 text-white hover:bg-purple-700 px-8 py-3 rounded-full text-lg font-semibold shadow-md transition duration-300 mt-4">
                         Get Directions
                     </a>
-                    <a href="https://form.jotform.com/251493884642063" target="_blank" class="inline-block bg-indigo-600 text-white hover:bg-indigo-700 px-8 py-3 rounded-full text-lg font-semibold shadow-md transition duration-300 mt-4 ml-0 sm:ml-4">
+                    <a href="https://form.jotform.com/251425170005443" target="_blank" class="inline-block bg-indigo-600 text-white hover:bg-indigo-700 px-8 py-3 rounded-full text-lg font-semibold shadow-md transition duration-300 mt-4 ml-0 sm:ml-4">
                         Book an Appointment
                     </a>
                 </div>
@@ -388,7 +533,7 @@
                     <a href="https://www.instagram.com/vishalbanquethall?igsh=MTVtenQyMjB5b2c5dQ%3D%3D&utm_source=qr" target="_blank" class="text-gray-600 hover:text-indigo-600 transition duration-300 text-4xl" aria-label="Instagram">
                         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4c0 3.2-2.6 5.8-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8C2 4.6 4.6 2 7.8 2m-.2 2A4.8 4.8 0 0 0 4.8 7.6v8.8c0 2.7 2.2 4.8 4.8 4.8h8.8c2.7 0 4.8-2.2 4.8-4.8V7.6c0-2.7-2.2-4.8-4.8-4.8zm7.5 3.7c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5s1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5m-3.7 2.2c-3.3 0-6 2.7-6 6s2.7 6 6 6s6-2.7 6-6s-2.7-6-6-6m0 2c2.2 0 4 1.8 4 4s-1.8 4-4 4s-4-1.8-4-4s1.8-4 4-4"/></svg>
                     </a>
-                    <a href="#" target="_blank" class="text-gray-600 hover:text-indigo-600 transition duration-300 text-4xl" aria-label="YouTube">
+                    <a href="http://www.youtube.com/@VishalBanquetHall" target="_blank" class="text-gray-600 hover:text-indigo-600 transition duration-300 text-4xl" aria-label="YouTube">
                         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2c5.52 0 10 4.48 10 10s-4.48 10-10 10S2 17.52 2 12S6.48 2 12 2m0 2c-4.42 0-8 3.58-8 8s3.58 8 8 8s8-3.58 8-8s-3.58-8-8-8m4.5 7.5L10 15.75V8.25z"/></svg>
                     </a>
                 </div>
@@ -403,5 +548,6 @@
         </div>
     </footer>
 
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
 </body>
 </html>
