--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </p>
             <div class="mt-6">
                 <h3 class="font-bold text-xl text-indigo-700 mb-4">Listen to Our Story</h3>
-                <audio controls src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/4948d7bad60ad6620e4565d6909a6be64832049d/%E0%A4%AC%E0%A5%8B%E0%A4%A7%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%95%E0%A4%BE_%E0%A4%B5%E0%A4%BF%E0%A4%B6%E0%A4%BE%E0%A4%B2_%E0%A4%AC%E0%A5%88%E0%A4%82%E0%A4%95%E0%A5%8D%E0%A4%B5%E0%A5%87%E0%A4%9F_%E0%A4%B9%E0%A5%89%E0%A4%B2__%E0%A4%B8%E0%A5%81%E0%A4%B5%E0%A4%BF%E0%A4%A7%E0%A4%BE%E0%A4%8F%E0%A4%82%2C_%E0%A4%A6%E0%A4%BE%E0%A4%B5%E0%A5%87_%E0%A4%94%E0%A4%B0_%E0%A4%8F%E0%A4%95_%E0%A4%85%E0%A4%A8%E0%A4%B8%E0%A5%81%E0%A4%B2%E0%A4%9D%E0%A4%BE_%E0%A4%B0%E0%A4%B9%E0%A4%B8%E0%A5%8D%E0%A4%AF.m4a" class="w-full"></audio>
+                <audio controls src="https://vishalbanquethall1.github.io/%E0%A4%AC%E0%A5%8B%E0%A4%A7%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%95%E0%A4%BE_%E0%A4%B5%E0%A4%BF%E0%A4%B6%E0%A4%BE%E0%A4%B2_%E0%A4%AC%E0%A5%88%E0%A4%82%E0%A4%95%E0%A5%8D%E0%A4%B5%E0%A5%87%E0%A4%9F_%E0%A4%B9%E0%A5%89%E0%A4%B2__%E0%A4%B8%E0%A5%81%E0%A4%B5%E0%A4%BF%E0%A4%A7%E0%A4%BE%E0%A4%8F%E0%A4%82%2C_%E0%A4%A6%E0%A4%BE%E0%A4%B5%E0%A5%87_%E0%A4%94%E0%A4%B0_%E0%A4%8F%E0%A4%95_%E0%A4%85%E0%A4%A8%E0%A4%B8%E0%A5%81%E0%A4%B2%E0%A4%9D%E0%A4%BE_%E0%A4%B0%E0%A4%B9%E0%A4%B8%E0%A5%8D%E0%A4%AF.m4a" class="w-full"></audio>
             </div>
             <p class="text-md text-gray-600 mt-6">
                 Find us easily at <span class="font-semibold">Gaya-Dobhi Rd, Musatpura, Bodh Gaya, Bihar 823004</span>
