--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             object-fit: cover; /* Cover the area without distortion */
             border-radius: 50%; /* Keep image circular if wrapper is circular */
         }
-        iframe {
+        iframe, video {
             border-radius: 1rem; /* Rounded corners for iframes (map, gallery) */
         }
 
@@ -273,6 +273,11 @@
         <section class="card">
             <h2 class="section-title">Our Event Gallery</h2>
             <div class="flex justify-center items-center flex-col">
+                <div class="mb-8 w-full">
+                    <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Watch Our Explainer Video</h3>
+                    <video src="https://vishalbanquethall1.github.io/The_Explainer__The_Vishal_Banquet_Hall.mp4" controls class="w-full rounded-lg shadow-md"></video>
+                </div>
+
                 <p class="text-lg text-gray-700 mb-6 text-center">Explore moments captured at Vishal Banquet Hall:</p>
                 <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
                     <a data-flickr-embed="true" data-header="true" data-footer="true" href="https://www.flickr.com/photos/202878976@N03/54606014869" title="Vishal Banquet Hall Photo 54606014869" aria-label="Flickr Photo 54606014869">
