--- a/index.html
+++ b/index.html
@@ -273,17 +273,39 @@
         <section class="card">
             <h2 class="section-title">Our Event Gallery</h2>
             <div class="flex justify-center items-center flex-col">
-                <div class="mb-8 w-full">
-                    <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Watch Our Explainer Video</h3>
-                    <video src="https://vishalbanquethall1.github.io/The_Explainer__The_Vishal_Banquet_Hall.mp4" controls class="w-full rounded-lg shadow-md"></video>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8 w-full">
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Watch Our Explainer Video</h3>
+                        <video src="https://vishalbanquethall1.github.io/The_Explainer__The_Vishal_Banquet_Hall.mp4" controls class="w-full rounded-lg shadow-md"></video>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Venue Showcase</h3>
+                        <video src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/f587abac1218b042fe355e4256d60e37fd0681ca/360p.mp4?raw=true" controls class="w-full rounded-lg shadow-md"></video>
+                    </div>
                 </div>
 
                 <p class="text-lg text-gray-700 mb-6 text-center">Explore moments captured at Vishal Banquet Hall:</p>
-                <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
-                    <a data-flickr-embed="true" data-header="true" data-footer="true" href="https://www.flickr.com/photos/202878976@N03/54606014869" title="Vishal Banquet Hall Photo 54606014869" aria-label="Flickr Photo 54606014869">
-                        <img src="https://live.staticflickr.com/65535/54606014869_80c636539c_c.jpg" width="1024" height="768" alt="Beautifully decorated Vishal Banquet Hall interior for events" loading="lazy">
-                    </a>
+                
+                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 w-full">
+                    <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
+                        <a data-flickr-embed="true" data-header="true" data-footer="true" href="https://www.flickr.com/photos/202878976@N03/54606014869" title="Vishal Banquet Hall Photo 54606014869" aria-label="Flickr Photo 54606014869">
+                            <img src="https://live.staticflickr.com/65535/54606014869_80c636539c_c.jpg" width="1024" height="768" alt="Beautifully decorated Vishal Banquet Hall interior for events" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
+                        <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/e74988207aca890704fb876fbf68864a74f9ad30/54629921814_3afa1357b3_b.jpg?raw=true" alt="Another stunning view of the event setup at Vishal Banquet Hall" class="w-full h-auto object-cover">
+                    </div>
+                    <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
+                        <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/0c57c94c05612251dc0ebd3cac1aaa618c006a2c/54604589467_03a4be7334_b.jpg?raw=true" alt="Decorated event space at Vishal Banquet Hall" class="w-full h-auto object-cover">
+                    </div>
+                    <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
+                        <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/0c57c94c05612251dc0ebd3cac1aaa618c006a2c/54605464121_6262c381f2_b.jpg?raw=true" alt="Banquet hall setup for a celebration" class="w-full h-auto object-cover">
+                    </div>
+                     <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
+                        <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/0c57c94c05612251dc0ebd3cac1aaa618c006a2c/54605673633_297ef222f9_b.jpg?raw=true" alt="Spacious interior of Vishal Banquet Hall" class="w-full h-auto object-cover">
+                    </div>
                 </div>
+
                 <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                 <p class="mt-6 text-gray-600 text-base text-center">
                     <a href="https://www.flickr.com/photos/202878976@N03" target="_blank" class="text-blue-600 hover:underline font-medium">View more photos on Flickr</a>
