--- a/index.html
+++ b/index.html
@@ -304,6 +304,12 @@
                      <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
                         <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/0c57c94c05612251dc0ebd3cac1aaa618c006a2c/54605673633_297ef222f9_b.jpg?raw=true" alt="Spacious interior of Vishal Banquet Hall" class="w-full h-auto object-cover">
                     </div>
+                    <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
+                        <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/b1de43c76d351cf8a44da9c631bd9ee1aa573145/54605766005_4068cd8cd1_b.jpg?raw=true" alt="Elegant event decoration at Vishal Banquet Hall" class="w-full h-auto object-cover">
+                    </div>
+                    <div class="w-full flex justify-center overflow-hidden rounded-xl shadow-lg">
+                        <img src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/b1de43c76d351cf8a44da9c631bd9ee1aa573145/54606014929_c7c008b2ae_b.jpg?raw=true" alt="Another view of the banquet hall setup" class="w-full h-auto object-cover">
+                    </div>
                 </div>
 
                 <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
