--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
                 <a href="https://www.wedmegood.com/wedding-venues/Vishal-Banquet-Hall-25850959" target="_blank" aria-label="WedMeGood" class="social-icon-wrapper">
                     <img src="https://placehold.co/40x40/FF69B4/ffffff?text=WMG" alt="WedMeGood icon" class="rounded-full w-10 h-10">
                 </a>
+                <a href="https://www.weddingbazaar.com/wedding-venues/gaya/vishal-banquet-hall-07f13b2d-a9b5-4d1b-83f1-cc73d8919888" target="_blank" aria-label="WeddingBazaar" class="social-icon-wrapper">
+                    <img src="https://placehold.co/40x40/E32173/ffffff?text=WB" alt="WeddingBazaar icon" class="rounded-full w-10 h-10">
+                </a>
                 <a href="https://retreat.guru/centers/9199-1/vishal-banquet-hall" target="_blank" aria-label="Retreat Guru" class="social-icon-wrapper">
                     <img src="https://placehold.co/40x40/8A2BE2/ffffff?text=RG" alt="Retreat Guru icon" class="rounded-full w-10 h-10">
                 </a>
