--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <a href="https://www.tumblr.com/vishalbanquethall" target="_blank" aria-label="Tumblr" class="social-icon-wrapper">
                     <i class="fab fa-tumblr social-icon"></i>
                 </a>
-                <a href="https://www.reddit.com/user/vishalbanquethall/" target="_blank" aria-label="Reddit Profile" class="social-icon-wrapper">
+                <a href="https://www.reddit.com/r/Bodhgaya/comments/1lhor4s/vishal_banquet_hall_bodh_gaya_ideal_venue_for/" target="_blank" aria-label="Reddit" class="social-icon-wrapper">
                     <i class="fab fa-reddit-alien social-icon"></i>
                 </a>
                 <a href="https://discord.gg/puGxuz3C" target="_blank" aria-label="Discord" class="social-icon-wrapper">
