--- a/index.html
+++ b/index.html
@@ -273,14 +273,18 @@
         <section class="card">
             <h2 class="section-title">Our Event Gallery</h2>
             <div class="flex justify-center items-center flex-col">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8 w-full">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8 w-full">
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Watch Our Explainer Video</h3>
-                        <video src="https://vishalbanquethall1.github.io/The_Explainer__The_Vishal_Banquet_Hall.mp4" controls class="w-full rounded-lg shadow-md"></video>
+                        <video src="https://vishalbanquethall1.github.io/The_Explainer__The_Vishal_Banquet_Hall.mp4" controls class="w-full rounded-lg shadow-md" style="aspect-ratio: 16/9;"></video>
                     </div>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Venue Showcase</h3>
-                        <video src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/f587abac1218b042fe355e4256d60e37fd0681ca/360p.mp4?raw=true" controls class="w-full rounded-lg shadow-md"></video>
+                        <video src="https://github.com/vishalbanquethall1/vishalbanquethall1.github.io/blob/f587abac1218b042fe355e4256d60e37fd0681ca/360p.mp4?raw=true" controls class="w-full rounded-lg shadow-md" style="aspect-ratio: 16/9;"></video>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Vimeo Showcase</h3>
+                        <iframe src="https://player.vimeo.com/video/1098403183" class="w-full rounded-lg shadow-md" style="aspect-ratio: 16/9;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
 
@@ -363,6 +367,9 @@
                 </a>
                 <a href="https://www.exportersindia.com/vishal-banquet-hall-gaya/" target="_blank" aria-label="Exporters India" class="social-icon-wrapper">
                     <img src="https://placehold.co/40x40/008080/ffffff?text=EI" alt="Exporters India icon" class="rounded-full w-10 h-10">
+                </a>
+                <a href="https://www.indianyellowpages.com/gaya/vishal-banquet-hall-14896409/" target="_blank" aria-label="Indian Yellow Pages" class="social-icon-wrapper">
+                    <img src="https://placehold.co/40x40/FFC107/000000?text=IYP" alt="Indian Yellow Pages icon" class="rounded-full w-10 h-10">
                 </a>
                 <a href="https://www.facebook.com/share/1BLptjfrcY/?mibextid=wwXIfr" target="_blank" aria-label="Facebook" class="social-icon-wrapper">
                     <i class="fab fa-facebook-f social-icon"></i>
