--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Our facilities and services are comparable to those found in top hotel venues, m
             </div>
             <div class="mt-6">
                 <h3 class="font-bold text-xl text-indigo-700 mb-4">Gaya & Bodhgaya: An Exploration</h3>
-                <audio controls src="https://vishalbanquethall1.github.io/%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%94%E0%A4%B0_%E0%A4%AC%E0%A5%8B%E0%A4%A7%E0%A4%97%E0%A4%AF%E0%A4%BE__%E0%A4%86%E0%A4%A7%E0%A5%8D%E0%A4%AF%E0%A4%BE%E0%A4%A4%E0%A5%8D%E0%A4%AE%E0%A4%BF%E0%A4%95%E0%A4%A4%E0%A4%BE_%E0%A4%B8%E0%A5%87_%E0%A4%86%E0%A4%A7%E0%A5%81%E0%A4%A8%E0%A4%BF%E0%A4%95%E0%A4%A4%E0%A4%BE_%E0%A4%A4%E0%A4%95_-_%E0%A4%8F%E0%A4%95_%E0%A4%AC%E0%A4%A6%E0%A4%B2%E0%A4%A4%E0%A5%87_%E0%A4%A4%E0%A5%80%E0%A4%B0%E0%A5%8D%E0%A4%A5%E0%A4%B8%E0%A5%8D%E0%A4%A5%E0%A4%B2_%E0%A4%95%E0%A5%80_%E0%A4%AA%E0%A4%A1%E0%A4%BC%E0%A4%A4%E0%A4%BE%E0%A4%B2.m4a" class="w-full"></audio>
+                <audio controls src="https://vishalbanquethall1.github.io/%E0%A4%97%E0%A4%AF%E0%A4%BE_%E0%A4%94%E0%A4%B0_%E0%A4%AC%E0%A5%8B%E0%A4%A7%E0%A4%97%E0%A4%AF%E0%A4%BE__%E0%A4%86%E0%A4%A7%E0%A5%8D%E0%A4%AF%E0%A4%BE%E0%A4%A4%E0%A5%8D%E0%A4%AE%E0%A4%BF%E0%A4%95%E0%A4%A4%E0%A4%BE_%E0%A4%B8%E0%A5%87_%E0%A4%86%E0%A4%A7%E0%A5%81%E0%A4%A8%E0%A4%BF%E0%A4%95%E0%A4%A4%E0%A4%BE_%E0%A4%A4%E0%A4%95_-_%E0%A4%8F%E0%A4%95_%E0%A4%AC%E0%A4%A6%E0%A4%B2%E0%A4%A4%E0%A5%87_%E0%A4%A4%E0%A5%80%E0%A4%B0%E0%A5%8D%E0%A4%A5%E0%A4%B8%E0%A5%8D%E0%A4%A5%E0%A4%B2_%E0%A4%95%E0%A5%80_%E0%A4%AA%E0%A4%BE%E0%A4%A4%E0%A5%8D%E0%A4%B0%E0%A4%BE.m4a" class="w-full"></audio>
             </div>
             <p class="text-md text-gray-600 mt-6">
                 Find us 
@@ -1004,6 +1004,54 @@ text-center
                 </p>
                 <a href="https://vishalhospitalrajkot.github.io/BodhgayaExplore/" target="_blank" class="btn">
                     Explore Now
+                </a>
+            </div>
+        </section>
+        
+        <section class="card">
+            <h2 class="section-title">Discover Bodh Gaya</h2>
+            <div class="text-center">
+                <p class="text-lg text-gray-700 leading-relaxed mb-6">
+                    Explore more about the sacred land of Bodh Gaya, its heritage, and its importance as a global spiritual center.
+                </p>
+                <a href="https://vishalhospitalrajkot.github.io/Bodhgaya-/" target="_blank" class="btn bg-purple-600 hover:bg-purple-700">
+                    Discover Bodh Gaya
+                </a>
+            </div>
+        </section>
+
+        <section class="card">
+            <h2 class="section-title">Explore Gaya</h2>
+            <div class="text-center">
+                <p class="text-lg text-gray-700 leading-relaxed mb-6">
+                    Learn more about the cultural and religious significance of Gaya, a city of ancient traditions.
+                </p>
+                <a href="https://vishalhospitalrajkot.github.io/GayaJi/" target="_blank" class="btn bg-orange-600 hover:bg-orange-700">
+                    Explore GayaJi
+                </a>
+            </div>
+        </section>
+
+        <section class="card">
+            <h2 class="section-title">Discover Bihar</h2>
+            <div class="text-center">
+                <p class="text-lg text-gray-700 leading-relaxed mb-6">
+                    Uncover the rich tapestry of history, culture, and spirituality that Bihar has to offer.
+                </p>
+                <a href="https://vishalhospitalrajkot.github.io/DiscoverBihar/" target="_blank" class="btn bg-green-600 hover:bg-green-700">
+                    Discover Bihar
+                </a>
+            </div>
+        </section>
+
+        <section class="card">
+            <h2 class="section-title">Explore Bihar</h2>
+            <div class="text-center">
+                <p class="text-lg text-gray-700 leading-relaxed mb-6">
+                    Delve deeper into the wonders of Bihar, from its ancient universities to its vibrant modern culture.
+                </p>
+                <a href="https://vishalhospitalrajkot.github.io/Bihar/" target="_blank" class="btn bg-teal-600 hover:bg-teal-700">
+                    Explore Bihar
                 </a>
             </div>
         </section>
